--- a/docker-images/artifacts/kafka-thirdparty-libs/3.9.x/pom.xml
+++ b/docker-images/artifacts/kafka-thirdparty-libs/3.9.x/pom.xml
@@ -32,6 +32,7 @@
         <opentelemetry.instrumentation.version>1.32.0-alpha</opentelemetry.instrumentation.version>
         <grpc-netty-shaded.version>1.61.0</grpc-netty-shaded.version>
         <guava.version>32.1.3-jre</guava.version>
+        <nimbus-jose-jwt.version>10.0.2</nimbus-jose-jwt.version>
     </properties>
 
     <repositories>
@@ -415,6 +416,12 @@
             <groupId>io.strimzi</groupId>
             <artifactId>kafka-env-var-config-provider</artifactId>
             <version>${kafka-env-var-config-provider.version}</version>
+        </dependency>
+        <!-- Adding nimbus-jose-jwt as a direct dependency to remediate CVE-2025-53864 -->
+        <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>${nimbus-jose-jwt.version}</version>
         </dependency>
     </dependencies>
 </project>
